[B]Version 1.0.7[/B]
- Fixed bug that doesn't allow to reproduce video correctly.

[B]Version 1.0.6[/B]
- Removed live, no more provided on the site.
- Small bugfix.

[B]Version 1.0.5[/B]
- Small bugfix/improvements.

[B]Version 1.0.4[/B]
- Small improvements.
- Adapted to the xbmc repository guidelines.

[B]Version 1.0.3[/B]
- Updated to the new neverwise library.
- Small bugfix/improvements.

[B]Version 1.0.2[/B]
- Updated new live url.
- Small improvements.

[B]Version 1.0.1[/B]
- Updated the url of live.
- Added the shows.
- New icon.

[B]Version 1.0.0[/B]
- Initial version.